# travel-agent

./: LICENSE  pyproject.toml
app/: main.py
app/api/endpoints/: map.py  poi.py  trip.py
app/core/: config.py  cors.py
app/core/agents/: trip_planner_agent.py
app/schemas/: travel_plan_related_schemas.py
app/services/: amap_service.py  llm_service.py  unsplash_service.py
app/utils/: show_graph.py
