[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.0",
    "fastapi>=0.115.0",
    "fastmcp>=2.0.0",
    "hello-agents[protocols]>=0.2.4",
    "httpx>=0.27.0",
    "huggingface-hub>=1.2.3",
    "ipython>=9.8.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "langsmith>=0.4.59",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uv>=0.8.0",
    "uvicorn[standard]>=0.32.0",
]
